[tool.poetry]
name = "cipher_fl2621"
version = "0.1.0"
description = "Python Package that contains a cipher function"
authors = ["Leon Lin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
